Thu May 17 15:02:31 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/shmem/ShmemSendStrategy.cpp:
        * dds/DCPS/transport/shmem/ShmemTransport.cpp:

          Fixed compile errors on non-Win32 platforms that do not have
          support for POSIX semaphores (tested with Android, may also
          fix VxWorks).

Thu May 17 07:57:52 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS:
          Add DDS4CCM with OpenDDS

Thu May 17 07:45:24 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:
        * dds/dcps_bits_source.mpb:
          Fixed problem when built_in_topics feature is disabled

Wed May 16 23:26:15 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/FooTest5_0/run_test.pl:

          Fixed typo.

Wed May 16 23:17:09 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * Merged the branch "SharedMemory", which includes a new shared-memory
          transport type.  See the NEWS file for an overview.
          For details of changes introduced on the branch,
          see docs/history/ChangeLog-SharedMemory.

Wed May 16 22:18:19 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DdsDcps.mpc:

          Tabs are significant in the portion of the mpc file that's copied
          verbatim into the generated GNU makefile.

Wed May 16 18:56:06 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DdsDcps.mpc:
          Fixed compile issues when CIAO is not available

Wed May 16 17:27:58 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/dds4ccm_opendds.mpb:
        * dds/DdsDcps.mpc:
          Fixed mpc problems when CIAO is not available

Wed May 16 09:17:43 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * dds/DCPS/Service_Participant.cpp:
          Changed the default recovery method back to REPO.

Wed May 16 06:38:56 UTC 2012  Marcel Smit  <msmit@remedy.nl>

        * dds/DCPS/Service_Participant.cpp: